# lukalibre

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  debug-server.sh  docker-compose.yml  run-pipeline-local.sh  setup.sh
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.vm  README.md  alembic.ini  docker-compose.yml  drop_prompt_templates.sql  go.mod  go.sum  main.go  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: .gitkeep  01_initial_migration.py  20250427_add_dashboard_balance_report_prompt.py  20250427_add_dashboard_html_report_prompt.py  227441b19fd3_add_prompt_templates_table.py  2ccd6a394e78_add_google_oauth_fields_to_user_model.py  490fed743eb0_merge_prompt_templates_heads.py  623b6ced729a_merge_heads_before_prompt_removal.py  65adc6e230bc_add_google_avatar_to_user_model.py  852ed1f4d09e_create_user_plans_table.py  ccc318f08674_remove_prompt_templates_table.py  d7cb9d4c3b7f_add_user_plan_table.py  e3e776686210_implement_user_plans_table.py  eb723f8b5486_add_developer_fields_to_user.py  ffd039311be6_add_user_llm_limits_and_llm_request_logs.py  insert_prompt_templates_seed.py  merge_prompts_heads.py  update_prompt_templates_remove_codeblock.py  upgrade_identify_schema_prompt.py
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py  settings.py
backend/app/crud/: __init__.py  base.py  crud_llm_limits.py  crud_prompt_template.py  crud_user_plan.py  item.py  user.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: __init__.py  item.py  llm_request_log.py  prompt_template.py  user.py  user_llm_limit.py  user_plan.py
backend/app/routes/: __init__.py
backend/app/schemas/: __init__.py  auth.py  item.py  prompt_template.py  token.py  user.py  user_plan.py
backend/app/static_schemas/: arriendo.schema.json  gasto_arriendo_dividendo.schema.json  gasto_cuentas_basicas.schema.json  gasto_deuda_credito.schema.json  honorarios.schema.json  prestamo_personal.schema.json  (+2 more)
backend/config/: config.go
backend/db/: migrate.go  models.go  pool.go  prompts.go
backend/handlers/: handlers.go  llm_proxy.go  prompts.go
backend/oauth/: google.go
backend/prompts/: prompts.go
backend/routes/: routes.go
backend/scripts/: create_superuser.py  start-services.sh  supervisord.conf
backend/utils/: idtoken.go  jwt.go
(+332 files in other folders)
